--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       
       <h1> Zetsy</h1>
       <img src="img_necklace.jpg" alt="Necklace">
+      <h2>About</h2>
     </div>
   </body>
 </html>
