Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <a href="http://nmai.si.edu">
         <img src="nmai-logo.png" alt="nmai">
       </a>
+      <a href="http://nmai.si.edu">
+        <img src="nmai-logo.png" alt="nmai">
+      </a>
+      <a href="http://nmai.si.edu">
+        <img src="nmai-logo.png" alt="nmai">
+      </a>
     </div>
   </body>
 </html>
