Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <a href="http://nmai.si.edu">
         <img src="nmai-logo.png" alt="nmai">
       </a>
-      <a href="http://nmai.si.edu">
-        <img src="nmai-logo.png" alt="nmai">
+      <a href="http://www.nytimes.com/pages/t-magazine/">
+        <img src="times-logo.png" alt="Times">
       </a>
       <a href="http://nmai.si.edu">
         <img src="nmai-logo.png" alt="nmai">
