--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="http://www.nytimes.com/pages/t-magazine/">
         <img src="times-logo.png" alt="Times">
       </a>
-      <a href="http://nmai.si.edu">
+      <a href="http://www.sedonamonthly.com">
         <img src="nmai-logo.png" alt="nmai">
       </a>
     </div>
