Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <img src="times-logo.png" alt="Times">
       </a>
       <a href="http://www.sedonamonthly.com">
+        <img src="sedona-logo.png" alt="Sedona">
+      </a>
+      <a href="http://nmai.si.edu">
         <img src="nmai-logo.png" alt="nmai">
       </a>
     </div>
