--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <a href="http://www.sedonamonthly.com">
         <img src="sedona-logo.png" alt="Sedona">
       </a>
-      <a href="http://nmai.si.edu">
-        <img src="nmai-logo.png" alt="nmai">
+      <a href="http://www.bergdorfgoodman.com/">
+        <img src="bergdorf-logo.png" alt="nmai">
       </a>
     </div>
   </body>
