Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <img src="bergdorf-logo.png" alt="nmai">
       </a>
     </div>
+    &copy; 2014 Zetsy, All Rights Reserved.
   </body>
 </html>
