Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="sedona-logo.png" alt="Sedona">
       </a>
       <a href="http://www.bergdorfgoodman.com/">
-        <img src="bergdorf-logo.png" alt="nmai">
+        <img src="bergdorf-logo.png" alt="Bergdorf">
       </a>
     </div>
     &copy; 2014 Zetsy, All Rights Reserved.
